--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 <body>
   <h1>To-Do List</h1>
-  <div class="input">
+  <div class="inputDiv">
     <input type="text" id="inputText" placeholder="Adicione uma tarefa">
-    <button id="addTaskBtn">Adicionar</button>
+    <button id="btnAddTask">Adicionar</button>
   </div>
-  <ul id="tasksList"></ul>
+  <ul id="ulTasksList"></ul>
+  <div class="completedTasks">
+    <div>Concluída</div>
+    <ul id="completedTasksList"></ul>
+  </div>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
